# sabi

./: .readthedocs.yaml  CHANGES.rst  LICENSE  README.rst  index.html  requirements.txt  sabi.py  setup.py  tests.py
.github/workflows/: workflow.yaml
docs/: conf.py  index.html  index.rst  objects.inv  requirements.txt  sabi.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  modules.rst.txt  sabi.rst.txt
html/: genindex.html  modules.html  py-modindex.html
sabi/: README.rst  setup.cfg
sabi/sabi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
sabi/src/sabi/: sabi.py
