[metadata]
name = sabi
version = 0.1
description =  Translate from plain English to Naija pidgin.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kolawole Olalekan
author_email = andrewolakola@gmail.com
url = https://github.com/techkaduna/sabi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    License :: Free For Educational Use
    Intended Audience :: Education

[options]
packages = find:
python_requires = >=3.6
install_requires =
    rich

[options.entry_points]
console_scripts =
    sabi = sabi.sabi:main
